src/components/Layout/Sections/style.module.less
@import '../../style/vars.less';

.section {
  padding: 5rem var(--grid-gap) 10rem;
  position: relative;
  overflow: hidden;

  @media (max-width: @breakPointM) {
    padding: 3rem 1rem 5rem;
  }

  &Video {
    padding-bottom: 5rem;

    .sectionBody {
      position: relative;
    }

    @media (max-width: @breakPointM) {
      padding-top: 10rem;
      padding-bottom: 12rem;
    }
  }

  &Illustration {
    @media (min-width: @breakPointM) {
      padding: 8rem 1rem 8rem;
    }
  }

  &:nth-child(3n + 1):not(:only-child) {
    --bg-color: @yellow;
    --font-color: @red;
    --secondary-color: @blueBright;
    --text-on-secondary-color: @yellow;
    background-color: @yellow;
    color: @red;

    &.sectionNewsletter {
      background-image: url('./backgrounds/newsletter_red.svg');
    }
  }

  &:nth-child(3n + 2) {
    --bg-color: @red;
    --font-color: @greyBright;
    background-color: @red;
    color: @greyBright;
  }

  &:nth-child(3n + 3),
  &:only-child {
    --bg-color: @grey;
    --font-color: @red;
    background-color: @grey;
    color: @red;
  }

  &:nth-child(3n + 2),
  &:nth-child(3n + 3),
  &:only-child {
    &.sectionNewsletter {
      background-image: url('./backgrounds/newsletter_yellow.svg');
    }
  }

  &.sectionNewsletter.sectionNewsletter {
    background-size: 25em;
    background-repeat: no-repeat;
    background-position: bottom -1px left -1px;
    padding-bottom: 12rem;

    @media (max-width: @breakPointM) {
      background-size: 20rem;
      background-position: bottom -1px left -1px;
      padding-bottom: 10rem;
    }
  }

  &.sectionPledge {
    z-index: 0;
  }

  &.sectionHeader {
    padding-top: 10rem;
    padding-bottom: 2rem;

    @media (max-width: @breakPointM) {
      padding-top: 5rem;
    }

    .inner {
      > * {
        position: relative;
        z-index: 1;
      }
    }
  }

  &CrowdCollect {
    background-image: url('./backgrounds/crowd_collect_yellow_desktop.svg');
    background-repeat: no-repeat;
    background-position: bottom -6rem center;
    background-size: auto 122rem;

    @media (min-width: 1300px) {
      background-size: auto 130rem;
    }

    @media (min-width: 1400px) {
      background-size: auto 160rem;
    }

    @media (max-width: 900px) {
      background-image: url('./backgrounds/crowd_collect_yellow_mobile.svg');
      padding-bottom: 23rem;
      background-position: bottom -3rem center;
      background-size: auto 160rem;
    }

    @media (max-width: 600px) {
      padding-bottom: 20rem;
      background-size: auto 130rem;
      background-position: bottom -1rem center;
    }

    @media (max-width: 450px) {
      padding-bottom: 15rem;
      background-size: auto 90rem;
      background-position: bottom 0rem center;
    }
  }
}

.jumpToAnchor {
  position: absolute;
  top: -@headerHeight;
}

.sectionBody {
  max-width: @contentWidthL;
  .contentGrid();
  margin: 0 auto;

  .sectionHeader & {
    z-index: 1;
    position: relative;
  }
}

.inner {
  overflow-wrap: break-word;
  word-wrap: break-word;
  max-width: 100%;
  .contentGridSlim();
  font-size: @fontSizeM;

  @media (max-width: @breakPointS) {
    font-size: @fontSizeS;
  }

  > :last-child {
    margin-bottom: 0;
  }

  > :first-child {
    margin-top: 0;
  }

  & + & {
    margin-top: 2rem;

    @media (max-width: @breakPointM) {
      margin-top: 1rem;
    }
  }
}

.innerWide {
  .contentGridMedium();
}

.innerTextHuge {
  font-size: @fontSizeL;

  @media (max-width: @breakPointM) {
    font-size: @fontSizeM;
  }
}

.sectionBodyNoEvents {
  pointer-events: none;
  z-index: 1;
}

.title {
  font-size: @fontSizeXXL;
  margin-top: 0;
  margin-bottom: 1rem;
  .contentGridSlim();

  @media (max-width: @breakPointM) {
    font-size: @fontSizeXL;
    margin-bottom: 0;
  }
}

.illustration {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.youtubeContainer {
  position: relative;
  padding-bottom: 56.25%;
  .contentGridSlim();
  pointer-events: all;

  iframe {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
  }
}

.emailSignup {
  @media (min-width: @breakPointM) {
    font-size: @fontSizeL;
  }
}

.slogan {
  .contentGrid();
  grid-column: 1 / -1;
  position: relative;
  z-index: 1;
  grid-row-gap: 2rem;
  margin: 4rem 0;
  font-size: @fontSizeXXXL;

  @media (max-width: @breakPointM) {
    font-size: @fontSizeL;
  }

  @media (max-width: @breakPointS) {
    font-size: @fontSizeL;
    grid-row-gap: 1rem;
    margin: 5rem 0 7rem;
  }
}

.sloganLine1 {
  grid-column: 3 / -1;
  color: @blueBright;

  @media (max-width: @breakPointM) {
    grid-column-start: 2;
  }

  @media (max-width: @breakPointM) {
    grid-column-start: 2;
  }
}

.sloganLine2 {
  grid-column: 4 / -1;

  @media (max-width: @breakPointM) {
    grid-column-start: 3;
  }

  @media (max-width: @breakPointS) {
    grid-column-start: 1;
  }
}

.sloganLineSignup {
  grid-column: 5 / -3;
  pointer-events: all;
  font-size: @fontSizeM;

  @media (max-width: @breakPointM) {
    grid-column-start: 4;
    grid-column-end: -2;
  }

  @media (max-width: @breakPointS) {
    grid-column-start: 1;
    grid-column-end: -1;
  }
}

.pledge {
  margin-top: 4rem;

  @media (max-width: @breakPointS) {
    margin-top: 1rem;
  }
}

.heroImage {
  position: absolute !important;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  filter: grayscale(1) contrast(0.3) brightness(1.6);
}

.heroImageOverlay {
  background: @yellow;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  mix-blend-mode: multiply;
}

.sectionWithHeroImage {
  text-shadow: 0 0 0.8rem fade(@yellow, 90);
}

.spaceBetweenBlogAndCTA {
  height: 2rem;
  grid-column: 3;

  @media (max-width: @breakPointS) {
    height: 1rem;
  }
}

